# hypehouse-live

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  post-mortem.yml
.github/workflows/: bake-in.yml  codeql.yml  copilot-ci.yml  engine-ci.yml  pages.yml  release.yml  tauri-build.yml  ui-ci.yml
copilot/: .gitignore  README.md  __init__.py  __main__.py  auto_mix.py  decisions.py  engine_client.py  http_server.py  key_match.py  library.py  library_rpc.py  loudness.py  main.py  playlist.py  playlist_rpc.py  preset_rpc.py  presets.py  proposer.py  pyproject.toml  schemas.py  service.py  stems.py  telemetry.py  waveform.py
copilot/cloud_sync/: __init__.py  bootstrap.py  client.py  daemon.py  supabase.py  syncer.py
copilot/cloud_sync/migrations/: 001_tracks.sql
copilot/streaming/: __init__.py  soundcloud.py
copilot/tests/: conftest.py  test_auto_mix.py  test_cloud_sync.py  test_cloud_sync_bootstrap.py  test_cloud_sync_daemon.py  test_cloud_sync_push.py  test_decisions.py  test_e2e_proposal.py  test_engine_client.py  test_http_server.py  test_key_match.py  test_library.py  test_library_analysis.py  test_library_cloud_sync.py  test_library_rpc.py  test_loudness.py  test_playlist.py  test_presets.py  test_proposer.py  test_service_integration.py  test_soundcloud.py  test_stems.py  test_supabase_adapter.py  test_telemetry.py  test_waveform.py
docs/: RELEASE.md  RELEASE_NOTES_v0.1.0.md  cloud-sync.md  copilot-integration.md  known-limitations.md  recording.md  stems.md  telemetry.md
docs/adr/: ADR-001-stack-choice.md  ADR-002-deck-primitive.md  ADR-003-event-sourced-state.md  ADR-004-realtime-audio-thread.md  ADR-005-takeover-envelope.md  ADR-006-effects-chain.md  ADR-007-clock-sync.md  ADR-008-code-signing-and-updater.md  ADR-009-ableton-link-licensing.md  ADR-010-cloud-library-sync.md
docs/api/: ws-protocol.md
engine/: Cargo.toml
engine/benches/: translator.rs
engine/src/: lib.rs  main.rs  oneshot_sweeper.rs  state.rs  telemetry.rs
engine/src/audio/: clock.rs  command.rs  decode.rs  http_source.rs  io.rs  limiter.rs  mixer.rs  mod.rs  perf.rs  pitch_tempo.rs  ring.rs  sidechain.rs  translator.rs  wsola.rs
engine/src/audio/effects/: echo.rs  filter.rs  gate.rs  lfo.rs  mod.rs  reverb.rs
engine/src/bridge/: auth.rs  decode_drain.rs  error.rs  library_proxy.rs  mod.rs  ratelimit.rs  rpc.rs  ws_server.rs
engine/src/clock_sync/: link_real.rs  link_stub.rs  mod.rs
engine/src/midi/: clamp.rs  clock_in.rs  clock_out.rs  listener.rs  mapping.rs  mod.rs
engine/src/midi/mappings/: ddj200.json
engine/src/persistence/: mod.rs  replay.rs  retention.rs  sessions.rs
engine/src/recording/: export.rs  mod.rs
engine/tests/: decode_smoke.rs  event_log_append_latency.rs  sessions_history_rpc.rs  ws_auth_hello.rs  ws_bridge_integration.rs  ws_submit_event_to_control_loop.rs
scripts/: __init__.py  cloud_sync_status.py  print_supabase_migrations.py  test_cloud_sync_status.py  test_print_supabase_migrations.py
scripts/bake_in/: __init__.py  generate_tracks.py  run_set.py  verify.py
scripts/bake_in/tests/: conftest.py  test_generate_tracks.py  test_run_set.py  test_verify.py
tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  updater.rs
tauri/tests/: release_workflow_yaml.rs  sidecar_spawn.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.ts  main.tsx  runtime.test.ts  runtime.ts  telemetry.test.ts  telemetry.ts
ui/src/components/: AboutPanel.test.tsx  AboutPanel.tsx  AutoMixButton.test.tsx  AutoMixButton.tsx  BpmLockBadge.test.tsx  BpmLockBadge.tsx  Button.test.tsx  Button.tsx  Crossfader.test.tsx  Crossfader.tsx  CueCountdown.test.tsx  CueCountdown.tsx  Deck.integration.test.tsx  Deck.test.tsx  Deck.tsx  DeckControls.tsx  DeckRow.tsx  EffectParamControl.tsx  EffectRack.test.tsx  EffectRack.tsx  EffectSlot.test.tsx  EffectSlot.tsx  HotCueMarkers.test.tsx  HotCueMarkers.tsx  KeyMatchButton.test.tsx  KeyMatchButton.tsx  Knob.test.tsx  Knob.tsx  Library.test.tsx  Library.tsx  LibraryFilters.test.tsx  LibraryFilters.tsx  LoopBarPresets.test.tsx  LoopBarPresets.tsx  MasterControls.test.tsx  MasterControls.tsx  MidiSettings.test.tsx  MidiSettings.tsx  MobileDeckSwiper.test.tsx  MobileDeckSwiper.tsx  (+30 more)
ui/src/hooks/: useViewport.ts
ui/src/midi/: MappingStore.test.ts  MappingStore.ts  keyboardListener.test.ts  keyboardListener.ts  listener.test.ts  listener.ts  mapping.ts  translator.ts
ui/src/midi/mappings/: ddj200.json  keyboard.json
ui/src/store/: autoMix.test.ts  autoMix.ts  connection.ts  effectsManifest.test.ts  effectsManifest.ts  engine.test.ts  engine.ts  hotCuePersist.test.ts  hotCuePersist.ts  library.test.ts  library.ts  notifications.ts  onboarding.ts  outputDevices.test.ts  outputDevices.ts  perf.test.ts  perf.ts  playlist.ts  presets.test.ts  presets.ts  sessionInfo.test.ts  sessionInfo.ts  sessions.ts  stems.test.ts  stems.ts  waveform.ts
ui/src/test-utils/: localStoragePolyfill.ts
ui/src/ws/: client.test.ts  client.ts
