[package]
name = "hypehouse-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "hypehouse-live audio engine — 2-deck mixing with sub-5ms latency, MIDI control, event-sourced state."
license = "MIT"
publish = false

[features]
default = []
# Enables the MIDI clock OUT v0.1 module (ADR-007). When off, the
# module compiles in trait-only form and main.rs skips device probe.
midi-clock-out = []

[dependencies]
# Audio I/O — cpal gives us a lock-free callback into the audio thread.
cpal = "0.16"

# Decode any common container (mp3, m4a, wav, flac, ogg) — symphonia is pure-Rust + no FFI.
symphonia = { version = "0.5", features = ["all"] }

# High-quality time-stretch (independent of pitch) — rubato sits behind a sample-rate-converter API.
rubato = "0.16"

# MIDI input — native ALSA / CoreMIDI / WinMM via a single crate.
midir = "0.10"

# Event-sourced state needs serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"

# JSON-RPC over WebSocket — bridge to the Tauri/TS frontend AND to the Python co-pilot.
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"

# HTTP client — used by the bridge to proxy `library.*` JSON-RPC calls
# to the copilot service's HTTP endpoint. `rustls-tls` avoids a native
# OpenSSL dependency on the build/CI matrix.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Ring buffer for the event log + lock-free SPSC queue for the audio thread.
ringbuf = "0.4"
crossbeam = "0.8"

# Small stack-allocated vectors — used by the control→audio translator to
# emit 0..N AudioCommands without heap allocation on the hot path.
smallvec = { version = "1", features = ["serde"] }

# Logging — structured JSON via tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors.
anyhow = "1"
thiserror = "2"

# Opt-in crash + perf telemetry (off by default at runtime — see
# `engine/src/telemetry.rs` and `docs/telemetry.md`). `rustls` keeps us
# off OpenSSL; `panic` wires the panic hook so unwinds in the audio
# thread bubble up as Sentry events. No `unsafe` is added.
sentry = { version = "0.32", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }

[dev-dependencies]
criterion = "0.7"
proptest = "1"
# Asserts no heap allocation happens within a gated scope — used to prove
# the audio-thread hot path is alloc-free per ADR-004.
assert_no_alloc = "1"
# Tiny mock HTTP server for the library-proxy tests — lets us stand up
# the copilot HTTP RPC endpoint in-process without depending on the
# real copilot service.
wiremock = "0.6"

[[bench]]
name = "translator"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1   # Even dev needs audio-thread-real-time perf; debug builds at opt 0 stutter.
