[package]
name = "hypehouse-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "hypehouse-live audio engine — 2-deck mixing with sub-5ms latency, MIDI control, event-sourced state."
license = "MIT"
publish = false

[features]
default = []
# Enables the MIDI clock OUT v0.1 module (ADR-007). When off, the
# module compiles in trait-only form and main.rs skips device probe.
midi-clock-out = []
# Enables the MIDI clock IN v0.3 module (ADR-007). When off, the
# module compiles with the trait + pure helpers (so tests still run)
# but the midir-backed `MidiClockIn::start` entry point is omitted and
# main.rs skips device probe.
midi-clock-in = []
# Enables the Ableton Link v0.2 backend (ADR-007 §v0.2 + ADR-009).
# **Scaffold only** as of this PR — the real `rust-link` binding is
# deferred to a v0.2.x follow-up that ships under ADR-009 sign-off
# (Link is LGPL v3). When the feature is enabled the `clock_sync::
# link_real::LinkReal` placeholder compiles but every method panics
# with `unimplemented!()` so accidentally opting in surfaces loudly
# rather than silently mis-syncing. Default off.
ableton-link = []

[dependencies]
# Audio I/O — cpal gives us a lock-free callback into the audio thread.
cpal = "0.16"

# Decode any common container (mp3, m4a, wav, flac, ogg) — symphonia is pure-Rust + no FFI.
symphonia = { version = "0.5", features = ["all"] }

# High-quality time-stretch (independent of pitch) — rubato sits behind a sample-rate-converter API.
rubato = "0.16"

# MIDI input — native ALSA / CoreMIDI / WinMM via a single crate.
midir = "0.10"

# Event-sourced state needs serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"

# JSON-RPC over WebSocket — bridge to the Tauri/TS frontend AND to the Python co-pilot.
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"

# HTTP client — used by the bridge to proxy `library.*` JSON-RPC calls
# to the copilot service's HTTP endpoint. `rustls-tls` avoids a native
# OpenSSL dependency on the build/CI matrix.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Ring buffer for the event log + lock-free SPSC queue for the audio thread.
ringbuf = "0.4"
crossbeam = "0.8"

# Safe, zero-cost POD slice reinterpretation — used by the recording
# writer thread to view `&[f32]` as `&[u8]` without copying. Replaces a
# previously-handwritten `unsafe` block (issue #45). The `Pod` +
# `AnyBitPattern` trait bounds enforce at compile time that the cast is
# sound, and `cast_slice` itself contains no `unsafe` at the call site.
bytemuck = "1.18"

# Small stack-allocated vectors — used by the control→audio translator to
# emit 0..N AudioCommands without heap allocation on the hot path.
smallvec = { version = "1", features = ["serde"] }

# Logging — structured JSON via tracing.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors.
anyhow = "1"
thiserror = "2"

# Opt-in crash + perf telemetry (off by default at runtime — see
# `engine/src/telemetry.rs` and `docs/telemetry.md`). `rustls` keeps us
# off OpenSSL; `panic` wires the panic hook so unwinds in the audio
# thread bubble up as Sentry events. No `unsafe` is added.
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "rustls", "reqwest"] }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
# Asserts no heap allocation happens within a gated scope — used to prove
# the audio-thread hot path is alloc-free per ADR-004.
assert_no_alloc = "1"
# Tiny mock HTTP server for the library-proxy tests — lets us stand up
# the copilot HTTP RPC endpoint in-process without depending on the
# real copilot service.
wiremock = "0.6"
# Cross-platform file-mtime setter — needed by the retention tests to
# back-date synthetic session directories so the prune cutoff has a
# deterministic signal independent of wall-clock skew.
filetime = "0.2"

[[bench]]
name = "translator"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1   # Even dev needs audio-thread-real-time perf; debug builds at opt 0 stutter.
